# raam-lm

./: .gitignore  AGENTS.md  DESIGN.md  EXPERIMENTS.md  PLAN.md  PROGRESS.md  README.md  RESULTS_TEMPLATE.md  pyproject.toml
docs/: AGENTIC_CODING_EVALS.md  DATASET_SELECTION_RESEARCH_2026.md  DATA_FORMAT.md  MLOPS.md  NEXT_STEPS_AUDIT_2026-07-04.md  SCRATCH_TRAINING_PLAN.md  STAGED_TRAINING_RUNBOOK.md  TRAINING_DATA_AND_VAST_RESEARCH.md  VAST_TRAINING.md
examples/: agentcoder_overfit_sanity.jsonl  agentcoder_slice_eval_cases.json  agentcoder_slice_train.jsonl  tiny_agentic.jsonl
scripts/: backfill_mlops_runs.py  compare_agentcoder_gates.py  compare_training_runs.py  estimate_flops.py  eval_agentic_coding.py  eval_chat.py  eval_coding_ladder.py  eval_function_memorization_probe.py  eval_function_probe_timeline.py  eval_overfit_sanity.py  eval_probes.py  export_checkpoint.py  generate.py  make_agentcoder_atomic_copy_sft.py  make_agentcoder_coding_ladder_sft.py  make_agentcoder_copyonly_sft.py  make_agentcoder_curated_sft.py  make_agentcoder_executable_sft.py  make_agentcoder_function_repair_sft.py  make_agentcoder_keyvalue_copy_sft.py  make_agentcoder_medium_repair_sft.py  make_agentcoder_mixed_curriculum.py  make_agentcoder_slotcopy_sft.py  make_tiny_dataset.py  pack_dataset.py  preflight_function_repair.py  preflight_medium_repair.py  prepare_agentcoder_research_data.py  profile_step.py  qualitative_checkpoint_inspect.py  run_agentcoder_atomic_anchor_seed_sweep.py  run_agentcoder_atomic_cardinality_sweep.py  run_agentcoder_atomic_copy_gate.py  (+17 more)
tests/: conftest.py  (+26 more)
(+90 files in other folders)
